objects/Account_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Snapshots</relationshipLabel>
        <relationshipName>Account_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Lead_Volume_Per_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Lead Volume Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_New_Customers_Per_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual New Customers Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_PPl__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual PPl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_ROI__c</fullName>
        <label>Actual ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Value_Goal__c</fullName>
        <label>Contract Value Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_PEV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecasted PEV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecasted_Revenue__c</fullName>
        <label>Total Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Under_Contract__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Under Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Account Snapshot</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Account Snapshot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Rogers_Support_Account_Snapshot</fullName>
        <filterScope>Queue</filterScope>
        <label>Rogers Support</label>
        <queue>Rogers_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LHMA_Post_Launch_Account_Snapshot</fullName>
        <filterScope>Queue</filterScope>
        <label>LHMA Post Launch</label>
        <queue>LHMA_Post_Launch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>